# nirssyan-mono

./: .gitignore  AGENTS.md  CLAUDE.md
.github/workflows/: bench-runner.yml  ci-agents.yml  ci-agno-assistant.yml  ci-auth-service.yml  ci-go-api-dagger.yml  ci-go-api.yml  ci-go-integrations.yml  ci-go-ko.yml  ci-go-poller.yml  ci-go-processor.yml  ci-go-registry.yml  ci-go-rss-api.yml  ci-go-scraper.yml  ci-landing-prod.yml  ci-landing.yml  ci-migrations.yml
.serena/: project.yml
database/migrations/: alembic.ini  env.py
infatium/: .dockerignore  .env.example  .gitignore  ANALYTICS_OVERHAUL_COMPLETE.md  ANALYTICS_OVERHAUL_FINAL.md  APPMETRICA_MIGRATION_REPORT.md  AuthKey_MT2ARL8UFD.p8  BACKGROUND_REFRESH_FIX.md  CLAUDE.md  DEBUG_LOGGING.md  Dockerfile  GLITCHTIP_IMPLEMENTATION_COMPLETE.md  GLITCHTIP_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  INFINITE_LOADING_FIX_IMPLEMENTATION.md  LOGGING_IMPLEMENTATION.md  PARALLEL_IOS_SETUP_SUMMARY.md  README.md  README_BUSINESS.md  README_SETUP_RU.md  SECURITY_AUDIT_REPORT.md  SHARE_FUNCTIONALITY_IMPLEMENTATION.md  SHARE_TESTING_GUIDE.md  TOKEN_REUSE_FIX_IMPLEMENTATION.md  WEB_SHARE_SERVICE.md  XCODE_SETUP_GUIDE.md  XCODE_SETUP_RU.md  docker-compose.yml  l10n.yaml  newfeature.xml  nginx.conf  pubspec.yaml  update_app_icons.sh
infatium/.serena/: project.yml
infatium/android/: build.gradle.kts  settings.gradle.kts
infatium/config/: README.md  dev.json  dev.local.json.backup  dev.local.json.example  prod.json  prod.local.json.backup  prod.local.json.example
infatium/forapplerelease/: appstore.md
infatium/forrustore/: description.md
infatium/ios/: .gitignore  ExportOptionsProd.plist  GoogleService-Info.plist
infatium/lib/: app.dart  main.dart
infatium/linux/: CMakeLists.txt
infatium/scripts/: build-android-dev.sh  build-android-prod.sh  build-ios-dev.sh  build-ios-prod.sh  run-dev.sh  run-prod.sh  setup.sh
infatium/test/: flutter_test_config.dart  screenshot_test.dart  widget_test.dart
infatium/web/: index.html  manifest.json
infatium/windows/: CMakeLists.txt
infra/: deploy  init
infra/ansible/: .env.example  ansible.cfg  deploy  export-env  init  requirements.yml
services/: CLAUDE.md
services/agents/: Dockerfile  pyproject.toml
services/agents/agents/: __init__.py  config.py  main.py  metrics.py  setup_logging.py  setup_opentelemetry.py  telemetry_filters.py
services/agents/agents/ai_agents/: __init__.py  base_agent.py  chat_message_agent.py  facts_extraction_agent.py  feed_comment_agent.py  feed_description_agent.py  feed_filter_agent.py  feed_summary_agent.py  feed_tags_agent.py  feed_title_agent.py  llm_logging.py  post_title_agent.py  prompt_builder.py  prompts.py  schemas.py  synthesis_agent.py  unseen_summary_agent.py  view_generator_agent.py  view_prompt_transformer_agent.py
services/agents/agents/handlers/: __init__.py  agents_handlers.py
services/agents/agents/utils/: db.py
services/agno-assistant/: Dockerfile  pyproject.toml
services/agno-assistant/agno_assistant/: agent.py  config.py  instructions.py  main.py
services/agno-assistant/agno_assistant/tools/: _http.py  feed_discovery.py  feed_management.py
services/auth-service/: CLAUDE.md  Dockerfile  go.mod  go.sum
services/go-api/: Dockerfile  go.mod  go.sum
services/go-integrations/: .env.example  .golangci.yml  Dockerfile  Makefile  README.md  go.mod  go.sum
services/go-poller/: .dockerignore  .env.example  Dockerfile  README.md  go.mod  go.sum
services/go-processor/: Dockerfile  go.mod  go.sum
services/go-registry/: Dockerfile  go.mod  go.sum
services/go-rss-api/: Dockerfile  go.mod  go.sum
services/integrations/: pyproject.toml
services/integrations/integrations/: __init__.py  config.py  main.py
services/integrations/integrations/controllers/: __init__.py  appstore_webhook.py  glitchtip_webhook.py  health.py  sentry_webhook.py
services/integrations/integrations/services/: __init__.py  appstore_webhook.py  glitchtip_webhook.py  sentry_webhook.py
services/shared-python/: README.md  pyproject.toml
services/shared-python/shared/: __init__.py  config.py  enums.py  sentry_utils.py  setup_logging.py  setup_sentry.py  trace_context.py
services/shared-python/shared/clients/: __init__.py  agents_client.py  openrouter_client.py  telegram_operations_client.py
services/shared-python/shared/context/: __init__.py  request_context.py
services/shared-python/shared/database/: __init__.py  connection.py  tables.py
services/shared-python/shared/events/: __init__.py  agent_requests.py  digest_scheduled.py  feed_created.py  feed_initial_sync.py  post_created.py  raw_post_created.py  source_validation.py  telegram_operations.py
services/shared-python/shared/faststream/: __init__.py  broker.py  digest_stream.py  feed_created_stream.py  initial_sync_stream.py  publisher.py  rpc.py  subscriber.py
services/shared-python/shared/models/: __init__.py  appstore_webhook.py  auth.py  chat.py  common.py  device_token.py  feed.py  feedback.py  filter.py  glitchtip_webhook.py  marketplace.py  media.py  post.py  post_seen.py  prompt.py  prompt_example.py  rustore_webhook.py  sentry_webhook.py  source_validation.py  subscription.py  suggestion.py  summarize.py  tag.py  telegram_link.py  user.py  users_feed.py
services/shared-python/shared/nats/: __init__.py  client.py  logging.py  publisher.py  request_reply.py
services/shared-python/shared/repositories/: __init__.py  chat.py  device_token.py  feed.py  feedback.py  llm_model.py  marketplace.py  post.py  post_seen.py  prompt.py  prompt_example.py  prompt_raw_feed_offset.py  raw_feed.py  raw_post.py  source.py  subscription.py  suggestion.py  tag.py  telegram_user.py  user.py  user_tag.py
services/shared-python/shared/services/: __init__.py  digest_scheduler.py
services/shared-python/shared/utils/: __init__.py  html_converter.py  llm_cost_tracker.py  llm_pricing.py  media_converter.py  prompt_parser.py
(+977 files in other folders)
