[project]
name = "infatium-integrations"
version = "0.1.0"
description = "Integrations service for Infatium (Appstore, Sentry webhooks)"
authors = [
    { name = "margosq", email = "slava1kvartovkin@gmail.com" }
]
dependencies = [
    "infatium-shared",
    "litestar>=2.0.0",
    "uvicorn>=0.24.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "sentry-sdk>=2.0.0",
    "pydantic-settings>=2.11.0",
    "prometheus-client>=0.23.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["integrations"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.6",
]

[tool.rye.sources]
shared = { path = "../shared-python", editable = true }

[tool.rye.scripts]
lint = { chain = ["lint:ruff-check", "lint:ruff-format"] }
"lint:ruff-check" = "ruff check --fix integrations/"
"lint:ruff-format" = "ruff format integrations/"
test = "pytest tests/ -v"

[project.scripts]
infatium-integrations = "integrations.main:run"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["."]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG001"]
ignore = ["E501", "B008", "C901", "W191"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
